--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "chai": "^4.3.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.0",
     "nock": "^13.3.7",
     "node-fetch": "^3.3.2",
     "sinon": "^17.0.0",
