--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8.52.0",
     "nock": "^13.3.7",
     "node-fetch": "^3.3.2",
-    "sinon": "^17.0.0"
+    "sinon": "^17.0.0",
+    "supertest": "^6.3.3"
   }
 }
