--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.15",
     "chai": "^4.3.10",
     "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
+    "nock": "^13.3.7",
+    "node-fetch": "^3.3.2",
     "sinon": "^17.0.0"
   }
 }
