--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "npx eslint **/*.js"
   },
   "bin": {
     "encrypt": "./cli_examples/bin/encrypt.js",
@@ -13,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "^8.51.0",
     "http": "^0.0.1-security",
     "lodash": "^4.1.0",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.52.0"
   }
 }
