--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "http": "^0.0.1-security",
     "lodash": "^4.1.0",
+    "morgan": "^1.10.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
