--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "lodash": "^4.1.0",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "request": "^2.88.2"
   },
   "devDependencies": {
