--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/mocha *.test.js",
     "lint": "npx eslint **/*.js"
   },
   "bin": {
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "lodash": "^4.1.0",
+    "mocha": "^10.2.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "request": "^2.88.2"
