--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha *.test.js",
+    "test-windows": ".\\node_modules\\.bin\\mocha **/*.test.js",
     "lint": "npx eslint **/*.js"
   },
   "bin": {
